samples/unified-flow/k8syamls/nodejs-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    move2kube.service.expose: "true"
  creationTimestamp: null
  labels:
    io.move2kube.service: nodejs
  name: nodejs
spec:
  replicas: 2
  selector:
    matchLabels:
      io.move2kube.service: nodejs
  strategy: {}
  template:
    metadata:
      annotations:
        move2kube.service.expose: "true"
      creationTimestamp: null
      labels:
        io.move2kube.service: nodejs
      name: nodejs
    spec:
      containers:
        - image: nodejs:latest
          imagePullPolicy: Always
          name: nodejs
          ports:
            - containerPort: 8080
          resources: {}
      restartPolicy: Always
status: {}
