samples/unified-flow/k8syamls/nodejs-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    move2kube.service.expose: "true"
  creationTimestamp: null
  labels:
    io.move2kube.service: nodejs
  name: nodejs
spec:
  ports:
    - name: "80"
      port: 80
      targetPort: 8080
  selector:
    io.move2kube.service: nodejs
  type: ClusterIP
status:
  loadBalancer: {}
