samples/unified-flow/k8syamls/nodejs-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  creationTimestamp: null
  labels:
    io.move2kube.service: nodejs
  name: nodejs
spec:
  rules:
    - http:
        paths:
          - backend:
              serviceName: nodejs
              servicePort: 80
            path: /
status:
  loadBalancer: {}
